objects/CSSRVMYFS_INTEREST_TYPES__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Interest_Code__c</fullName>
        <label>Interest_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Value__c</fullName>
        <label>Interest_Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type_Code__c</fullName>
        <label>Request_Type_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSSRVMYFS_INTEREST_TYPES</label>
</CustomObject>